cluster/apps/monitoring/grafana/operator/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator
  namespace: monitoring
spec:
  description: Allow API access, Grafana configuration, dashboard downloads and metrics
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: grafana-operator
      app.kubernetes.io/name: grafana-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  enableDefaultDeny:
    ingress: true
    egress: true
  log:
    value: grafana-operator
